syntax = "proto3";

package io.mystore.order.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/mystore/cart/entity/shopping_cart_entity.proto";

service CartToOrder {
  option (kalix.codegen) = {
    action : {}
  };

  rpc OnCartCheckedOut(cart.entity.CartCheckedOut)
      returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "shopping_cart"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity : "shopping_cart"
    };
  }
}
